[gd_scene load_steps=11 format=3 uid="uid://bnet60oxmrwou"]

[ext_resource type="Script" path="res://main.gd" id="1_esqo3"]
[ext_resource type="PackedScene" uid="uid://cwlotrn8ewukj" path="res://Player/player.tscn" id="1_tgl0w"]
[ext_resource type="PackedScene" uid="uid://cvevdhavilnas" path="res://LoseWindow/lose_window.tscn" id="2_7jh5y"]
[ext_resource type="PackedScene" uid="uid://hdikweho5wdc" path="res://Ball/ball.tscn" id="2_txhno"]
[ext_resource type="PackedScene" uid="uid://b2qsjhwdmnrt8" path="res://Enemy/enemy.tscn" id="3_y8ic2"]
[ext_resource type="Texture2D" uid="uid://c5y62qln7aeec" path="res://background.png" id="4_c1m1e"]
[ext_resource type="PackedScene" uid="uid://blvxq0j55vc5b" path="res://PointsLabel/points_label.tscn" id="5_snc0f"]
[ext_resource type="PackedScene" uid="uid://iid0h1w5u8s7" path="res://Timer/timer.tscn" id="7_0ojvm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eykqq"]
size = Vector2(20, 49.018)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6pni6"]
size = Vector2(20, 51.7118)

[node name="Main" type="Node2D"]
script = ExtResource("1_esqo3")

[node name="LoseWindow" parent="." instance=ExtResource("2_7jh5y")]
visible = false
unfocusable = false

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(1007, 553)
texture = ExtResource("4_c1m1e")

[node name="Player" parent="." instance=ExtResource("1_tgl0w")]
position = Vector2(-62, 128)

[node name="Ball" parent="." instance=ExtResource("2_txhno")]
position = Vector2(254, 87)

[node name="Enemy" parent="." instance=ExtResource("3_y8ic2")]

[node name="PlayerSideArea2D" type="Area2D" parent="."]
position = Vector2(0, 67)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerSideArea2D"]
position = Vector2(-126, 494)
scale = Vector2(3.64085, 43.6778)
shape = SubResource("RectangleShape2D_eykqq")

[node name="InvisibleWall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="InvisibleWall"]
position = Vector2(922, -64)
rotation = 1.57272
scale = Vector2(3.64085, 43.6778)
shape = SubResource("RectangleShape2D_6pni6")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="InvisibleWall"]
position = Vector2(1949, 564)
scale = Vector2(3.64085, 43.6778)
shape = SubResource("RectangleShape2D_6pni6")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="InvisibleWall"]
position = Vector2(919, 1145)
rotation = 1.5727
scale = Vector2(3.64085, 43.6778)
shape = SubResource("RectangleShape2D_6pni6")

[node name="PointsLabel" parent="." instance=ExtResource("5_snc0f")]
offset_left = 904.0
offset_top = 1.0
offset_right = 1343.0
offset_bottom = 246.0
script = null

[node name="Timer" parent="." instance=ExtResource("7_0ojvm")]

[connection signal="visibility_changed" from="LoseWindow" to="." method="_on_lose_window_visibility_changed"]
[connection signal="body_entered" from="PlayerSideArea2D" to="." method="_on_player_side_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="Player" method="_on_timer_timeout"]
